--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ nav li {
     padding: 0px 0px;
     color: whitesmoke;
     
-    background: url("images/dirty-metal-texture.jpg") no-repeat center center/cover;
+    background: url("images/dirty-metal-texture.webp") no-repeat center center/cover;
     
 }
 .hero-content {
