--- a/styles.css
+++ b/styles.css
@@ -223,3 +223,11 @@ footer {
         font-size: 0.85rem;
     }
 }
+
+.seo-headings {
+    position: absolute;
+    left: -9999px;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
